--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+
+<h3>Comments (<%= @article.comments.count %>)</h3>
+<%= render partial: "articles/comment", collection: @article.comments %>
+
+<%= render partial: "comments/form" %>
+
 <%= link_to "<< Back to Articles List", articles_path %>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
 <%= link_to "Edit", edit_article_path(@article) %>
