Tagging features finished

--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -5,3 +5,8 @@
 		<li><%= link_to article.title, article_path(article) %></li>
 	<% end %>
 </ul>
+
+<%= link_to "<< Back to Articles List", articles_path %>
+<%= link_to "Delete Tag", tag_path(@tag), method: :delete, data: {confirm: "Really delete this tag?"} %>
+
+
