--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,5 +13,5 @@
 <%= render partial: "comments/form" %>
 
 <%= link_to "<< Back to Articles List", articles_path %>
-<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete this article?"} %>
 <%= link_to "Edit", edit_article_path(@article) %>
