--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -3,7 +3,9 @@
 <ul id="tags">
 	<% @tags.each do |tag| %>
 		<li>
-			<%= link_to tag %>
+			<%= link_to tag.name, tag_path(tag) %>
 		</li>
 	<% end %>
 </ul>
+
+<%= link_to "<< Back to Articles List", articles_path %>
