--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,4 +8,6 @@
 	<% end %>
 </ul>
 
-<%= link_to "Create a NEW Article", new_article_path, class: "new_article" %>
+<% if logged_in? %>
+	<%= link_to "Create a NEW Article", new_article_path, class: "new_article" %>
+<% end %>
