--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,5 +20,8 @@
 <%= render partial: "comments/form" %>
 
 <%= link_to "<< Back to Articles List", articles_path %>
-<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete this article?"} %>
-<%= link_to "Edit", edit_article_path(@article) %>
+<% if logged_in? %>
+	<%= link_to "Create a NEW Article", new_article_path, class: "new_article" %>
+	<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Really delete this article?"} %>
+	<%= link_to "Edit", edit_article_path(@article) %>
+<% end %>
