--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 				<%= link_to "(logout)", logout_path %>
 			<% else %>
 				<%= link_to "(login)", login_path %>
+				<%= link_to "(register)", new_author_path %>
 			<% end %>
 		</h6>
 	</div>
